--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
             <ul class='container' id='container'>
                 <li class='p3'>
                     <h3>Game</h3>
-                    <p>通过这个小游戏，了解面向对象的编程，掌握了构造函数模式与继承模式来创建对象，同时掌握了JS通过原型链来实现继承。并了解了canvas技术。预览：源码地址：<a href='https://github.com/oyiooi/MyReads.git' target="_blank">https://github.com/oyiooi/MyReads.git</a></p>
+                    <p>通过这个小游戏，了解面向对象的编程，掌握了构造函数模式与继承模式来创建对象，同时掌握了JS通过原型链来实现继承。并了解了canvas技术。<a href='https://oyiooi.github.io/little-game/' target='_blank'>预览：https://oyiooi.github.io/little-game/；</a><a href='https://github.com/oyiooi/little-game' target='_blank' >源码地址： https://github.com/oyiooi/little-game</a></p>
                 </li>
                 <li class='p4'>
                     <h3>ToDoList</h3>
-                    <p>在该项目中使用原生Js 与CSS 3D实现了3D轮播图以及一个通过点击目标播放琴声的小游戏，使用了Dom操作技术，CSS 动画，Web Audio API以及Ajax。预览：源码地址：<a href='https://github.com/oyiooi/MyReads.git' target="_blank">https://github.com/oyiooi/MyReads.git</a></p>
+                    <p>使用webpack构建了一个自动化的react开发环境，用react-redux对应用状态进行了管理。<a href='https://admiring-khorana-33a5ab.netlify.com' target='_blank'>预览：https://admiring-khorana-33a5ab.netlify.com；</a><a href='https://github.com/oyiooi/todolist' target='_blank'>源码地址：https://github.com/oyiooi/todolist</a></p>
                 </li>
                 <li class='p5'>
                     <h3>电子简历</h3>
-                    <p>使用webpack构建了一个自动化的react开发环境，用react-redux对应用状态进行了管理。预览：源码地址：<a href='https://github.com/oyiooi/MyReads.git' target="_blank">https://github.com/oyiooi/MyReads.git</a></p>
+                    <p>在该项目中使用原生JS 与CSS 3D实现了3D轮播图以及一个通过点击目标播放琴声的小游戏，使用了Dom操作技术，CSS 动画，Web Audio API以及Ajax。<a href='https://oyiooi.github.io/resume/' target='_blank'>预览：https://oyiooi.github.io/resume/；</a><a href='https://github.com/oyiooi/resume' target='_blank' >源码地址：https://github.com/oyiooi/resume</a></p>
                 </li>
                 <li class='p6'>
-                    <h3>餐厅点评App</h3>
-                    <p>在该项目中使用CSS创建了基于网格的响应式布局，为不同尺寸屏幕提供了媒体查询，并为该App添加了Service Worker脚本缓存对所有站点资源的请求。源码地址：<a href='https://github.com/oyiooi/MyReads.git' target="_blank">https://github.com/oyiooi/MyReads.git</a></p>
+                    <h3>餐厅点评webApp</h3>
+                    <p>在该项目中使用CSS创建了基于网格的响应式布局，为不同尺寸屏幕提供了媒体查询，并为该App添加了Service Worker脚本缓存对所有站点资源的请求。<a href='https://github.com/oyiooi/mws-restaurant-stage-1' target='_blank'>源码地址：https://github.com/oyiooi/mws-restaurant-stage-1</a></p>
                 </li>
                 <li class='p7'>
                     <h3>天气App</h3>
-                    <p>使用create-react-app脚手架工具构建开发环境，使用Ajax技术从天气API与高德地图API获取数据，使用react-router向项目中添加路由。预览：源码地址：<a href='https://github.com/oyiooi/MyReads.git' target="_blank">https://github.com/oyiooi/MyReads.git</a></p>
+                    <p>使用create-react-app脚手架工具构建开发环境，使用Ajax技术从天气API与高德地图API获取数据，使用react-router向项目中添加路由。<a href='https://mystifying-swartz-607e8a.netlify.com' target='_blank' >预览：https://mystifying-swartz-607e8a.netlify.com；</a><a href='https://github.com/oyiooi/myweather' target='_blank'>源码地址：https://github.com/oyiooi/myweather</a></p>
                 </li>
             </ul>
             <!--<div class='indicator'>
@@ -80,7 +80,7 @@
                     <div class='exp work'>
                         <div class='work-header'>工作经历</div>
                         <div class='work-content'>
-                            <p class='needFont'>负责工艺设备的Move In和Set Up，制定进度计划，联系协调其他部门与厂商对设备软硬件进行测试，并通过自己的努力提前完成任务。</p>
+                            <p class='needFont'>2017-2019，合肥京东方显示技术有限公司负责工艺设备的Move In和Set Up，制定进度计划，联系协调其他部门与厂商对设备软硬件进行测试，并通过自己的努力提前完成任务。</p>
                         </div>
                     </div>
                     <div class='exp cult'>
